<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="#5A49D6">

    <Button
        android:id="@+id/btnProfilePicture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_picture"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#FFFFFF"
        android:textColor="#000000"

        />

    <Button
        android:id="@+id/btnPersonalDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/personal_details"
        android:backgroundTint="#FFFFFF"
        android:textColor="@android:color/black"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/btnSummary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/summary"
        android:backgroundTint="#FFFFFF"
        android:textColor="@color/black"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/btnEducation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/education"
        android:backgroundTint="#FFFFFF"
        android:textColor="@android:color/black"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/btnExperience"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/experience"
        android:backgroundTint="#FFFFFF"
        android:textColor="@android:color/black"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/btnCertifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/certifications"
        android:backgroundTint="#FFFFFF"
        android:textColor="@android:color/black"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/btnReferences"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/references"
        android:backgroundTint="#FFFFFF"
        android:textColor="@android:color/black"
        android:layout_marginBottom="20dp"/>
    <Button
        android:id="@+id/btnViewProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/references"
        android:backgroundTint="#FFFFFF"
        android:textColor="@android:color/black"
        android:layout_marginBottom="20dp"/>
</LinearLayout>
